--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=5051
+#server.port=5051
 spring.application.name=Employeedemo
 spring.datasource.url=jdbc:mysql://localhost:3306/employee
 spring.datasource.username=root
